test/sema/typeck/literal/without-suffix-byte-overflow.dora
fn f(): UInt8 { 256 }
